--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,30 +1,15 @@
-<app-product-search (searchEvent)="search($event)"></app-product-search>
-<button mat-raised-button color="primary" (click)="changeStatus()">Show create product form</button>
-<app-product-create *ngIf="status"></app-product-create>
-<table mat-table [dataSource]="listProduct" class="mat-elevation-z8">
-
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-  <!-- Position Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef> Price </th>
-    <td mat-cell *matCellDef="let element"> {{element.price}} </td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="address">
-    <th mat-header-cell *matHeaderCellDef> Address </th>
-    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+<app-product-search (searchEvent)="search($event)" (keyup)="getAllProduct()"></app-product-search>
+<table>
+  <tr>
+    <td>Name</td>
+    <td>Price</td>
+    <td>Description</td>
+  </tr>
+  <tr *ngFor="let product of listProduct">
+    <td>{{product.name}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.description}}</td>
+  </tr>
 </table>
-
+<button mat-raised-button (click)="changeStatus()">Show Create Form</button>
+<app-product-create *ngIf="status" (productSubmit)="addProductToList($event)"></app-product-create>
