demo product service and router

--- a/src/app/product-create/product-create.component.html
+++ b/src/app/product-create/product-create.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/products">Product List</a>
 <h1>Form Create Product</h1>
 <form #productForm="ngForm" (ngSubmit)="createProduct(productForm)">
   <div>
