--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <a routerLink="/products/create">Show Create Form</a>
-<app-product-search (searchEvent)="search($event)" (keyup)="getAllProduct()"></app-product-search>
+<p *ngIf="message!=''">{{message}}</p>
 <table>
   <tr>
     <td>#</td>
@@ -13,7 +13,10 @@
     <td>{{product.name}}</td>
     <td>{{product.price}}</td>
     <td>{{product.description}}</td>
-    <td><button mat-raised-button color="primary" (click)="showEditForm(i)">Edit</button></td>
+    <td><button mat-raised-button color="primary">
+      <a [routerLink]="['/products/edit/',product.id]">Edit</a>
+    </button></td>
   </tr>
 </table>
-<app-product-edit *ngIf="statusForEditForm" [product]="productEdit"></app-product-edit>
+<button mat-raised-button color="primary" (click)="previous()">Previous</button>
+<button mat-raised-button color="primary" (click)="next()">Next</button>
